--- a/PracticasJS2/js/dom/prac_dos/eje_uno/enDomingo.html
+++ b/PracticasJS2/js/dom/prac_dos/eje_uno/enDomingo.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-
-
+<p>¿Ponemos a hervir el agua?</p>
+<p class="respuesta"></p>
     <script src="index.js"></script>
 </body>
 </html>
