--- a/PracticasJS2/js/dom/prac_dos/eje_cinco/cinco.html
+++ b/PracticasJS2/js/dom/prac_dos/eje_cinco/cinco.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<h1>La magia sucede en la consola!</h1>
+<p> ¿Querés aplicar dark mode en el sitio?</p>
+<p class="respuesta"> </p>
 
     <script src="index.js"></script>
 </body>
