--- a/PracticasJS2/js/dom/prac_dos/eje_cuatro/alBanco.html
+++ b/PracticasJS2/js/dom/prac_dos/eje_cuatro/alBanco.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<h1>La magia sucede en la consola!</h1>
+    <p>¿Podemos ir al banco?</p>
+    <p class="respuesta"></p>
 
     <script src="index.js"></script>
 </body>
