--- a/PracticasJS2/js/dom/prac_dos/eje_tres/signo.html
+++ b/PracticasJS2/js/dom/prac_dos/eje_tres/signo.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<h1>La magia sucede en la consola!</h1>
+<p>¿De qué signo sos?</p>
+<P class="respuesta"></P>
 
     <script src="index.js"></script>
 </body>
