--- a/PracticasJS2/js/dom/prac_dos/eje_dos/esMayor.html
+++ b/PracticasJS2/js/dom/prac_dos/eje_dos/esMayor.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<h1>La magia sucede en la consola!</h1>
+<p>¿Qué número es mayor?</p>
+<p class="respuesta"></p>
 
     <script src="index.js"></script>
 </body>
